samples/_failures_safe/1761374417_f45f6e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_738b740c.c: In function ‘main’:
./samples/SAFE/__tmp_738b740c.c:145: error: expected ‘]’ at end of input
./samples/SAFE/__tmp_738b740c.c:144:5: error: expected declaration or statement at end of input
  144 |     char input_text[MAX_TEXT_LEN
      |     ^~~~
